--- a/css/index.css
+++ b/css/index.css
@@ -46,15 +46,17 @@ h1, h2 {
   }
 
 * {
- font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+ font-family:'Poppins', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif
  
 
 }
 
-li {
-  background-color:darkslategrey;
-  background-size: 10%;
-  padding: 1px 1px;
+
+div {
+    background-color:grey; max-width:400px; margin:auto; border-radius: 10px;
+
 
 
 }
+
+
