--- a/css/index.css
+++ b/css/index.css
@@ -23,20 +23,20 @@ ul li, p, h1 , h2 {
 
  p {
     text-align:center;
+    font-size:  15px; 
+    font-weight: bold;
     
 
 
  }
 
-
-h1, h2 {
- text-align:center;
- background-size: 10px;
- background-color: grey;
- border-radius: 8px;
+ a {
+  font-size: 25px;
+  font-weight:bold;
+ }
 
 
-}
+
 
 .center {
     display: block;
@@ -46,14 +46,17 @@ h1, h2 {
   }
 
 * {
- font-family:'Poppins', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif
+ font-family: 'Poppins', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif
  
 
 }
 
 
-div {
-    background-color:grey; max-width:400px; margin:auto; border-radius: 10px;
+ .wrapper {
+    background-color:grey; max-width:fit-content; margin:auto; border-radius: 10px;
+    
+
+
 
 
 
