--- a/css/index.css
+++ b/css/index.css
@@ -1,65 +1,74 @@
-html {
-  background-color: black;
-
-
-}
-
-
-img {
-  width: 100px;
-  border-radius: 8px;
-  margin: auto;
- 
-
-}
-
-ul li, p, h1 , h2 {
-  color:white;
-  text-align:center;
-
-
-
-}
-
- p {
-    text-align:center;
-    font-size:  15px; 
-    font-weight: bold;
-    
-
-
- }
-
- a {
-  font-size: 25px;
-  font-weight:bold;
- }
-
-
-
-
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
-
 * {
- font-family: 'Poppins', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif
+ font-family:Arial, Helvetica, sans-serif;
+ font-weight: 100px;
+ color:white;
+
  
 
-}
-
-
- .wrapper {
-    background-color:grey; max-width:fit-content; margin:auto; border-radius: 10px;
-    
-
-
-
-
 
 }
 
+body {
+  display: flex;
+  justify-content: center; /* Centers horizontally */
+  align-items: center; /* Centers vertically */
+  height: 100vh; /* Full viewport height */
 
+
+}
+
+div {
+ width: 500px;
+ height: 300px;
+ margin-left: 100px;
+ margin-right:100px;
+ outline: 35px solid rgb(7, 3, 17);
+ background-color:rgb(49, 40, 40);
+ 
+
+ 
+ 
+
+
+}
+
+
+span {
+ font-size: larger;
+ 
+ width: 10px;
+ 
+ margin-left: 10px;
+ box-sizing:border-box;
+ border-right: 1px;
+
+
+
+} 
+
+h1 {
+ 
+ background-color: grey;
+ margin-bottom: 0;
+ margin-top: 0;
+ margin-bottom: 30px;
+ padding-top: 10px;
+ padding-bottom: 10px;
+ padding-left: 10px;
+
+ 
+
+
+}
+
+a {
+ padding-left: 10px;
+
+
+
+}
+
+html {
+background-color: darkslategray;
+
+}
