Added cooler image

--- a/css/index.css
+++ b/css/index.css
@@ -103,6 +103,6 @@ a {
 
 html {
 background-color: rgb(29, 55, 114);
-background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F724880.gif&f=1&nofb=1&ipt=aefa655678b706018ff510e1a85981dc9cb1d07490341251458e93f56f5c69a9&ipo=images');
+background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp2757868.gif&f=1&nofb=1&ipt=c4483ee4cdd5b3696d9b09caca7cbb1cb5f260cac0d1b68b5f212e17ac1f6caa&ipo=images');
 background-size: cover
 }
