--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 * {
- font-family:Arial, Helvetica, sans-serif;
+ font-family: 'Geist Sans',   Arial, Helvetica, sans-serif;
  font-weight: 100px;
  color:white;
 
@@ -22,9 +22,10 @@ div {
  height: 300px;
  margin-left: 100px;
  margin-right:100px;
- outline: 35px solid rgb(7, 3, 17);
- background-color:rgb(49, 40, 40);
- border-radius:10px
+ outline: 3px solid rgb(244, 244, 244);
+ background-color:rgb(29, 27, 27);
+ border-radius:10px;
+ padding: 10px;
  
  
 
@@ -62,15 +63,16 @@ object-fit: cover;
 
 }
 
-h1 {
+.underlay {
  
- background-color: grey;
+ background-color: rgb(0, 0, 0);
  margin-bottom: 0;
  margin-top: 0;
  margin-bottom: 30px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
+ border-radius:10px
 
  
 
@@ -104,5 +106,6 @@ a {
 html {
 background-color: rgb(29, 55, 114);
 background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp2757868.gif&f=1&nofb=1&ipt=c4483ee4cdd5b3696d9b09caca7cbb1cb5f260cac0d1b68b5f212e17ac1f6caa&ipo=images');
+
 background-size: cover
 }
