--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 * {
- font-family: 'Geist Sans',   Arial, Helvetica, sans-serif;
+ font-family: Arial, Helvetica, sans-serif;
  font-weight: 100px;
  color:white;
 
@@ -72,7 +72,9 @@ object-fit: cover;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
- border-radius:10px
+ border-radius:10px;
+ border-color:red;
+ 
 
  
 
@@ -109,3 +111,30 @@ background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F
 
 background-size: cover
 }
+
+@media (max-width: 600px)  {
+  div {
+   width:10-0px;
+   margin:0;
+
+
+  }
+   * {
+     font-size:x-small
+
+
+   }
+
+   img {
+    width: 20px;
+    height: 20px;
+    
+
+
+
+
+   }
+
+  }
+  
+  
