--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
 
 }
 
+
 body {
   display: flex;
   justify-content: center; /* Centers horizontally */
@@ -17,7 +18,7 @@ body {
 
 }
 
-div {
+.box {
  width: 500px;
  height: 300px;
  margin-left: 100px;
@@ -26,6 +27,8 @@ div {
  background-color:rgb(29, 27, 27);
  border-radius:10px;
  padding: 10px;
+ padding-bottom: 5px;
+
  
  
 
@@ -36,25 +39,13 @@ div {
 }
 
 
-span {
- font-size: larger;
- 
- width: 10px;
- 
- margin-left: 10px;
- box-sizing:border-box;
- border-right: 1px;
 
-
-
-} 
 
 img {
 
 width:30px;
 height:30px;
-padding-left:10px;
-vertical-align: -8px;
+vertical-align: -10px;
 object-fit: cover;
 
 
@@ -63,21 +54,22 @@ object-fit: cover;
 
 }
 
+
+
+
+
+
+
+
 .underlay {
  
  background-color: rgb(0, 0, 0);
- margin-bottom: 0;
  margin-top: 0;
- margin-bottom: 30px;
  padding-top: 10px;
  padding-bottom: 10px;
- padding-left: 10px;
  border-radius:10px;
- border-color:red;
- 
-
- 
-
+ padding-left: 3px;
+ padding-right: 3px;
 
 }
 
@@ -90,10 +82,7 @@ h4 {
 
 
 p {
-
-  padding-left:10px;
-  padding-right:10px;
-
+  padding:5px; display:inline-block; outline:solid 1px whitesmoke; margin-right: 10px; font-weight: bolder; 
 
 
 }
@@ -113,15 +102,21 @@ background-size: cover
 }
 
 @media (max-width: 600px)  {
-  div {
+  .box {
    width: 300px;
+   height: 300px;
    margin:0;
    overflow: hidden;
+   margin-bottom: 100px;
 
 
   }
+
+
+
+
    * {
-     font-size: 20px;
+     font-size: 15px;
 
 
    }
