Added focus to about me

--- a/stylesheets/output.css
+++ b/stylesheets/output.css
@@ -2423,6 +2423,12 @@
       }
     }
   }
+  .focus\:blur-none {
+    &:focus {
+      --tw-blur:  ;
+      filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+    }
+  }
 }
 @keyframes spin {
   to {
